--- a/views/components/analysis.ejs
+++ b/views/components/analysis.ejs
@@ -381,7 +381,7 @@
                         </tr>
                         <tr>
                            <td>
-                              <span> GÍA CHO THUÊ PHÒNG </span>
+                              <span> GIÁ CHO THUÊ PHÒNG </span>
                            </td>
                            <td>
                               <div class="form-group mb-0 d-inline-block">
