--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -361,3 +361,8 @@ p.agileits2 {
    font-size: 16px;
    font-weight: 500;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+   -webkit-appearance: none;
+   margin: 0;
+}
