--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -60,9 +60,9 @@
 </div>
 <% } %>
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-<!-- <script type="text/javascript">
+<script type="text/javascript">
    jQuery(document).ready(function ($) {
       $('.alert__success').delay(3000).fadeOut('slow');
       $('.alert__fail').delay(3000).fadeOut('slow');
-   }); -->
+   });
 </script>
